--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #2e2e3f;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #f7d9d9;
 }
 
 body {
@@ -48,7 +48,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #f7d9d9;
 }
 button:focus,
 button:focus-visible {
@@ -57,11 +57,11 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: #2e2e3f;
+    background-color: #f5e5e5;
   }
   a:hover {
-    color: #747bff;
+    color: #0000ee;
   }
   button {
     background-color: #f9f9f9;
