--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,11 @@
 .read-the-docs {
   color: #888;
 }
+
+.CardList {
+  display: grid;
+  list-style: none;
+  float: left;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 24px 6%;
+}
