Co-authored-by: Hasemiki420 <Hasemiki420@users.noreply.github.com> Co-authored-by: Matcha77 <Matcha77@users.noreply.github.com>

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(0, 0, 0, 0.87);
+  background-color: #f5e5e5;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -34,36 +33,34 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  cursor: pointer;
 }
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 0.5px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #f1f1f1;
   cursor: pointer;
-  transition: border-color 0.25s;
 }
+
+.small-button {
+  padding: 8px; /* 小さいサイズ */
+  font-size: 12px;
+}
+
+.large-button {
+  padding: 10px; /* 大きいサイズ */
+  font-size: 14px;
+}
+
 button:hover {
   border-color: #f7d9d9;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #2e2e3f;
-    background-color: #f5e5e5;
-  }
-  a:hover {
-    color: #0000ee;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
