--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -3,15 +3,16 @@
 }
 
 .table-content-center {
-  width: 160px;
+  width: 180px;
 }
 
 .table-content-right {
-  width: 35px;
+  width: 10px;
 }
 
 .kininaru-button {
   width: 20px;
+  margin-right: 8px;
 }
 
 .item-title {
@@ -23,4 +24,8 @@
   padding-left: 4px;
   padding-right: 4px;
   font-size: small;
+}
+
+table {
+  margin-bottom: 10px;
 }
